[tool.poetry]
name = "rut"
version = "0.1.0"
description = "A cli of r utilities aimed at package and .Rprofile management."
authors = ["Your Name <you@example.com>"]
readme = 'README.md'
repository = "https://github.com/datasnakes/rut"
homepage = "https://github.com/datasnakes/rut"
keywords = ['r', 'package-management', 'utilities']

[tool.poetry.dependencies]
python = "3.6"
click = "^7.0"
rpy2 = "^2.9"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
rut = "rut.rut:cli"